--- a/portofolio.html
+++ b/portofolio.html
@@ -23,10 +23,11 @@
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <a href="info@devstudio.com">info@devstudio.com</a>
-        <a href="+1-212-772-4150">+1 212-772-4150</a>
+        <a class="header__info2" href="info@devstudio.com">info@devstudio.com</a>
+        <a class="header__info2" href="+1-212-772-4150">+1 212-772-4150</a>
     </header>
-<!--Main section-->
+
+    <!--Main section-->
     <main>
         <!--Button section-->
             <div class="buttons">
@@ -36,7 +37,8 @@
                 <button type="button">Design</button>
                 <button type="button">Marketing</button>
             </div>
-        <!--list section-->
+
+             <!--list section-->
     <div class="list__section">
         <ul>
             <li>
@@ -85,17 +87,14 @@
         </ul>
     </div>
     </main>
-    <!--Footer section-->
-    <footer class="footer">
+     <!--Footer section-->
+     <footer class="footer">
         <p><span>Web</span>Studio</p>
         <address>
             <p>695 Park Ave, NY 10065, USA</p> <br>
-             <a href="info@devstudio.com">info@devstudio.com</a><br>
-             <a href="+21-21-772-4150">+21 21-772-4150</a>           
+             <a class="header__info2" href="info@devstudio.com">info@devstudio.com</a><br>
+             <a class="header__info2" href="+21-21-772-4150">+21 21-772-4150</a>           
          </address>
     </footer>
-
-
-    
 </body>
 </html>
