--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--header section-->
     <header class="header">
         <div class="header__logo">
-            <p><span>Web</span>Studio</p>
+            <a href="#"><p><span>Web</span>Studio</p></a>
         </div>
         <nav class="header__navigation">
             <ul>
@@ -98,7 +98,7 @@
 
     <!--footer section-->
     <footer class="footer">
-        <p><span>Web</span>Studio</p>
+        <a href="#"><p><span>Web</span>Studio</p></a>
         <address>
            <p class="footer_p">695 Park Ave, NY 10065, USA</p> <br>
             <a class="header__info2" href="info@devstudio.com">info@devstudio.com</a><br>
