--- a/portofolio.html
+++ b/portofolio.html
@@ -14,7 +14,7 @@
     <!--Header section-->
     <header class="header">
         <div class="header__logo">
-            <p><span>Web</span>Studio</p>
+            <a href="#"><p><span>Web</span>Studio</p></a>
         </div>
         <nav class="header__navigation"> 
             <ul>
@@ -89,7 +89,7 @@
     </main>
      <!--Footer section-->
      <footer class="footer">
-        <p><span>Web</span>Studio</p>
+        <a href="#"><p><span>Web</span>Studio</p></a>
         <address>
             <p>695 Park Ave, NY 10065, USA</p> <br>
              <a class="header__info2" href="info@devstudio.com">info@devstudio.com</a><br>
