--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
 
     <!--footer section-->
     <footer class="footer">
-        <a href="#"><p><span>Web</span>Studio</p></a>
+        <a class="footer_atribut" href="#">
+            <p><span>Web</span>Studio</p>
+        </a>
         <address>
-           <p class="footer_p">695 Park Ave, NY 10065, USA</p> <br>
+           <p class="footer_p2">695 Park Ave, NY 10065, USA</p> <br>
             <a class="header__info2" href="info@devstudio.com">info@devstudio.com</a><br>
             <a class="header__info2" href="+21-21-772-4150">+21 21-772-4150</a>           
         </address>
