--- a/portofolio.html
+++ b/portofolio.html
@@ -89,9 +89,9 @@
     </main>
      <!--Footer section-->
      <footer class="footer">
-        <a href="#"><p><span>Web</span>Studio</p></a>
+        <a class="footer_atribut" href="#"><p class="footer_p1"><span>Web</span>Studio</p></a>
         <address>
-            <p>695 Park Ave, NY 10065, USA</p> <br>
+            <p class="footer_p2">695 Park Ave, NY 10065, USA</p> <br>
              <a class="header__info2" href="info@devstudio.com">info@devstudio.com</a><br>
              <a class="header__info2" href="+21-21-772-4150">+21 21-772-4150</a>           
          </address>
